<resources>
    <string name="app_name">Guiadir</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="idioma">es</string>
    <string name="spain"> ESPAÑOL </string>
    <string name="english"> INGLÉS </string>
    <string name="french"> FRANCÉS </string>
    <string name="german"> ALEMÁN </string>
    <string name="mapa"> MAPA </string>
    <string name="menu"> MENÚ </string>
    <string name="info"> +INFO </string>
    <string name="volver"> VOLVER </string>
    <string name="localizarme"> LOCALIZARME </string>
    <string name="compartir"> COMPARTIR </string>
    <string name="buscar"> BUSCAR </string>
    <string name="horario"> HORARIO </string>
    <string name="direccion"> DIRECCIÓN </string>
    <string name="alimentacion">alimentación</string>
    <string name="asociaciones">asociaciones</string>
    <string name="compras">compras</string>
    <string name="deporte">deporte</string>
    <string name="educacion">educación</string>
    <string name="hoteles">hoteles</string>
    <string name="instituciones">instituciones</string>
    <string name="inmobiliaria">inmobiliaria</string>
    <string name="monumentos">monumentos</string>
    <string name="ocio">ocio</string>
    <string name="parque">parque</string>
    <string name="playa">playa</string>
    <string name="restauracion">restauración</string>
    <string name="salud">salud</string>
    <string name="servicios">servicios</string>
    <string name="seguridad">seguridad</string>
    <string name="transporte">transporte</string>
    <string name="alimentacion_ico">ic_cat_a_alimentacion</string>
    <string name="asociaciones_ico">ic_cat_asociaciones</string>
    <string name="compras_ico">ic_cat_c_compras</string>
    <string name="deporte_ico">ic_cat_d_deporte</string>
    <string name="educacion_ico">ic_cat_e_educacion</string>
    <string name="hoteles_ico">ic_cat_h_hoteles</string>
    <string name="instituciones_ico">ic_cat_i_instituciones</string>
    <string name="inmobiliaria_ico">ic_cat_inmobiliaria</string>
    <string name="monumentos_ico">ic_cat_m_monumentos</string>
    <string name="ocio_ico">ic_cat_o_ocio</string>
    <string name="parque_ico">ic_cat_pa_parque</string>
    <string name="playa_ico">ic_cat_pl_playa</string>
    <string name="restauracion_ico">ic_cat_r_restauracion</string>
    <string name="salud_ico">ic_cat_sa_salud</string>
    <string name="servicios_ico">ic_cat_se_servicios</string>
    <string name="seguridad_ico">ic_cat_seg_seguridad</string>
    <string name="transporte_ico">ic_cat_t_transporte</string>
    <string name="spaintoast"> Has cambiado el idioma a Español </string>
    <string name="englishtoast"> Has cambiado el idioma a Ingles </string>
    <string name="frenchtoast"> Has cambiado el idioma a Francés </string>
    <string name="germantoast"> Has cambiado el idioma a Alemán </string>
    <string name="infocabecera"> INFO DE LA APP </string>
    <string name="infomensaje">
        <![CDATA[
        Esta App permite encontrar el negocio u otra localizacion que necesitas de la zona Costa Noroeste de la provincia de Cádiz.
<br><b>No recogemos datos de los usuarios</b>, solo empresas o particulares que deseen anunciarse que publicarán los datos necesarios.
Si estás interesado en anunciarte o necesitas contactar con nosotros por alguna otra razón, nos puedes enviar un email a esta cuenta:</br>
]]>
    </string>
    <string name="infovolver"> VOLVER AL MENU </string>
    <string name="filtrocabecera"> FILTRAR </string>
    <string name="filtrarporcabecera"> FILTRAR POR CATEGORÍA </string>
    <string name="CARNICERIA"> Carnicería </string>
    <string name="FRUTERIA"> Frutería </string>
    <string name="PANADERIA"> Panadería </string>
    <string name="PASTELERIA"> Pastelería </string>
    <string name="PESCADERIA"> Pescadería </string>
    <string name="SUPERMERCADO"> Supermercado </string>
    <string name="AOTROS"> Otros alimentación </string>
    <string name="ASOCIACIONES">Asociaciones</string>
    <string name="BAZAR"> Bazar </string>
    <string name="BICICLETA"> Bicicleta </string>
    <string name="BODEGAS"> Bodegas </string>
    <string name="CALZADO"> Calzado </string>
    <string name="CONCESIONARIO"> Concesionario </string>
    <string name="DEPORTES"> Deportes </string>
    <string name="DROGUERIA"> Droguería </string>
    <string name="ELECTRONICA"> Electrónica </string>
    <string name="FERRETERIA"> Ferretería </string>
    <string name="FLORISTERIA"> Floristería </string>
    <string name="INFORMATICA"> Informática </string>
    <string name="JOYERIA"> Joyería </string>
    <string name="JUGUETERIA"> Juguetería </string>
    <string name="KIOSKO"> Kiosko </string>
    <string name="MASCOTAS"> Mascotas </string>
    <string name="MERCADILLO"> Mercadillo </string>
    <string name="MOBILARIO"> Mobiliario </string>
    <string name="MOTOS"> Motos </string>
    <string name="MOVILES"> Móviles </string>
    <string name="ROPA"> Ropa </string>
    <string name="COTROS"> Otros compras </string>
    <string name="ESTADIO"> Estadio </string>
    <string name="GIMNASIO"> Gimnasio </string>
    <string name="GOLF"> Golf </string>
    <string name="PISCINA"> Piscina </string>
    <string name="POLIDEPORTIVO"> Polideportivo </string>
    <string name="SKATEPARK"> Skatepark </string>
    <string name="TENIS"> Tenis </string>
    <string name="DOTROS"> Otros deportes </string>
    <string name="ACADEMIA"> Academia </string>
    <string name="AUTOESCUELA"> Autoescuela </string>
    <string name="BIBLIOTECA"> Biblioteca </string>
    <string name="COLEGIO"> Colegio </string>
    <string name="GUARDERIA"> Guardería </string>
    <string name="INSTITUTO"> Instituto </string>
    <string name="UNIVERSIDAD"> Universidad </string>
    <string name="ALBERGUE"> Albergue </string>
    <string name="APARTAHOTEL"> Apartahotel </string>
    <string name="CAMPING"> Camping </string>
    <string name="HOSTAL"> Hostal </string>
    <string name="HOTEL"> Hotel </string>
    <string name="PENSION"> Pensión </string>
    <string name="INMOBILIARIA"> Inmobiliaria </string>
    <string name="AYUNTAMIENTO"> Ayuntamiento </string>
    <string name="CORREOS"> Correos </string>
    <string name="JUZGADOS"> Juzgados </string>
    <string name="OMIC"> Omic </string>
    <string name="TURISMO"> Turismo </string>
    <string name="IOTROS"> Otros instituciones </string>
    <string name="CASTILLO"> Castillo </string>
    <string name="ESTATUA"> Estatua </string>
    <string name="IGLESIA"> Iglesia </string>
    <string name="MUSEO"> Museo </string>
    <string name="PLAZADETOROS"> Plaza de toros </string>
    <string name="PUENTE"> Puente </string>
    <string name="RUINAS"> Ruinas </string>
    <string name="TORRE"> Torre </string>
    <string name="MOTROS"> Otros monumentos </string>
    <string name="CINE"> Cine </string>
    <string name="BINGO"> Bingo </string>
    <string name="DISCOTECA"> Discoteca </string>
    <string name="KARAOKE"> Karaoke </string>
    <string name="PARQUEINFANTIL"> Parque infantil </string>
    <string name="PAINTBALL"> Paintball </string>
    <string name="SCAPEROOM"> Scape room </string>
    <string name="SPA"> Spa </string>
    <string name="TEATRO"> Teatro </string>
    <string name="ZOO"> Zoo </string>
    <string name="OOTROS"> Otros ocio </string>
    <string name="BOSQUE"> Bosque </string>
    <string name="JARDINES"> Jardines </string>
    <string name="MARISMAS"> Marismas </string>
    <string name="PARQUE"> Parque </string>
    <string name="PLAYA"> Playa </string>
    <string name="ASADOR"> Asador </string>
    <string name="BAR"> Bar </string>
    <string name="CAFETERIA"> Cafetería </string>
    <string name="CERVECERIA"> Cervecería </string>
    <string name="CHIRINGUITO"> Chiringuito </string>
    <string name="HAMBURGUESA"> Hamburguesa </string>
    <string name="HELADERIA"> Heladería </string>
    <string name="PIZZERIA"> Pizzería </string>
    <string name="PUB"> Pub </string>
    <string name="RESTAURANTE"> Restaurante </string>
    <string name="ROTROS"> Otros restauración </string>
    <string name="AMBULATORIO"> Ambulatorio / Hospital </string>
    <string name="DENTISTA"> Dentista </string>
    <string name="DIETISTA"> Dietista </string>
    <string name="FARMACIA"> Farmacia </string>
    <string name="FISIOTERAPIA"> Fisioterapia </string>
    <string name="OPTICA"> Óptica </string>
    <string name="PODOLOGO"> Podólogo </string>
    <string name="PSICOLOGIA"> Psicología </string>
    <string name="VETERINARIO"> Veterinario </string>
    <string name="SOTROS"> Otros salud </string>
    <string name="AUTOLAVADOCOCHE"> Autolavado Coche </string>
    <string name="BANCA"> Banca </string>
    <string name="FOTOGRAFO"> Fotógrafo </string>
    <string name="GASOLINERA"> Gasolinera </string>
    <string name="IMPRENTA"> Imprenta </string>
    <string name="JURIDICO"> Jurídico </string>
    <string name="LIMPIEZA"> Limpieza </string>
    <string name="PAPELERIA"> Papelería </string>
    <string name="PELUQUERIA"> Peluquería </string>
    <string name="PINTOR"> Pintor </string>
    <string name="PLAGAS"> Plagas </string>
    <string name="REFORMAS"> Reformas </string>
    <string name="TALLER"> Taller </string>
    <string name="TATUAJE"> Tatuaje </string>
    <string name="TINTORERIA"> Tintorería </string>
    <string name="TRANSPORTES"> Transportes </string>
    <string name="VIAJES"> Viajes </string>
    <string name="SEOTROS"> Otros servicios </string>
    <string name="GUARDIACIVIL"> Guardia Civil </string>
    <string name="POLICIALOCAL"> Policía Local </string>
    <string name="POLICIANACIONAL"> Policía Nacional </string>
    <string name="PROTECCIONCIVIL"> Protección Civil </string>
    <string name="SEGURIDAD"> Seguridad </string>
    <string name="VIGILANCIA"> Vigilancia </string>
    <string name="AEROPUERTO"> Aeropuerto </string>
    <string name="ESTACIONTREN"> Estación Tren </string>
    <string name="ESTACIONBUS"> Estación Bus </string>
    <string name="PARADABUS"> Parada Bus </string>
    <string name="PUERTO"> Puerto </string>
    <string name="TAXI"> Taxi </string>
    <string name="OTROS"> Otros </string>
    <string name="SALIRDELAAPP"> Salir de la aplicación </string>
    <string name="SALIRTXT"> ¿Seguro que desea salir de la aplicación? </string>
    <string name="SALIRSI"> SI </string>
    <string name="SALIRCANCELAR"> CANCELAR </string>
    <string name="EscribeBuscar"> Escribe algo antes de buscar </string>
    <string name="NoTieneFacebook"> no tiene perfil en Facebook </string>
    <string name="NoTieneTwitter"> no tiene perfil en Twitter </string>
    <string name="NoTieneMail"> no tiene email </string>
    <string name="NoTieneContacto"> no tiene teléfono de contacto </string>
    <string name="NoTieneInformacion"> no tiene más información </string>
    <string name="NoEncuentraLlamar"> No se encuentra app para llamar </string>
    <string name="NoEncuentraEmail"> No se encuentra app para enviar email </string>
    <string name="NoEncuentraLocalizacion"> No se encuentra localización </string>
    <string name="NoHayMapas"> No hay servidor de mapas </string>
    <string name="EnviarEmail"> Enviar email... </string>
    <string name="BuscarEditText"> Buscar por ciudad, nombre...  </string>
    <string name="EnviadoDesde"> Enviado desde la app Guiadir  </string>
    <string name="Compartirvia"> Compartir vía  </string>
    <string name="title_activity_bbmapa_m">Map</string>
</resources>