<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/z_background"
    tools:context=".BBMapaActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <ImageView
                    android:id="@+id/imgCabeceramenuBB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/paddinginteriorlayout"
                    android:adjustViewBounds="true"
                    android:cropToPadding="true"
                    android:tint="@color/amarilloTXTCABECERA"
                    app:srcCompat="@drawable/ic_menu_mapa" />

                <TextView
                    android:id="@+id/tvcabeceraCA"
                    style="@style/txtcabecera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" MAPA"
                    android:textSize="@dimen/txtcabecera" />

            </LinearLayout>

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_bbmapa" />

    <com.getbase.floatingactionbutton.FloatingActionsMenu
        android:id="@+id/menu_fabBB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="@dimen/fab_margin"
        app:fab_addButtonColorPressed="@color/verdeTXTFOOTER"
        fab:fab_addButtonColorNormal="@color/verdeINTENSO"
        fab:fab_addButtonSize="normal"
        fab:fab_labelStyle="@style/Etiquetas"
        fab:fab_labelsPosition="left">

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="@color/amarilloTXTCABECERA"
            app:fab_colorPressed="@color/amarilloINTENSO"
            fab:fab_icon="@drawable/menu_circular_spain"
            fab:fab_size="mini"
            android:onClick="clickSpainBB"
            fab:fab_title="@string/spain" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="@color/amarilloTXTCABECERA"
            app:fab_colorPressed="@color/amarilloINTENSO"
            fab:fab_icon="@drawable/menu_circular_uk"
            fab:fab_size="mini"
            android:onClick="clickUkBB"
            fab:fab_title="@string/english" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="@color/amarilloTXTCABECERA"
            app:fab_colorPressed="@color/amarilloINTENSO"
            fab:fab_icon="@drawable/menu_circular_france"
            fab:fab_size="mini"
            android:onClick="clickFranceBB"
            fab:fab_title="@string/french" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="@color/amarilloTXTCABECERA"
            app:fab_colorPressed="@color/amarilloINTENSO"
            fab:fab_icon="@drawable/menu_circular_german"
            fab:fab_size="mini"
            android:onClick="clickGermanBB"
            fab:fab_title="@string/german" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="@color/verdeINTENSO"
            app:fab_colorPressed="@color/verdeTXTFOOTER"
            fab:fab_icon="@drawable/menu_circular_filtrar"
            fab:fab_size="mini"
            android:onClick="clickFiltrarBB"
            fab:fab_title="@string/filtrocabecera" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="@color/verdeINTENSO"
            app:fab_colorPressed="@color/verdeTXTFOOTER"
            fab:fab_icon="@drawable/menu_circular_localizar"
            fab:fab_size="mini"
            android:onClick="clickLocalizarmeBB"
            fab:fab_title="@string/localizarme" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/botonBBMapaRenovar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="@color/verdeINTENSO"
            app:fab_colorPressed="@color/verdeTXTFOOTER"
            fab:fab_icon="@drawable/menu_circular_menu"
            fab:fab_size="mini"
            android:onClick="clickMenuBB"
            fab:fab_title="@string/menu" />

    </com.getbase.floatingactionbutton.FloatingActionsMenu>


</android.support.design.widget.CoordinatorLayout>