<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/amarilloINTENSO">

    <LinearLayout
        android:background="@color/negro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingVertical="@dimen/paddingcabeceradialog">

        <TextView
            android:id="@+id/tvcabeceraDialog"
            style="@style/txtcabecera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SALIRDELAAPP"
            android:textAlignment="center"
            android:textSize="@dimen/txtcabecera" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvInfoApp"
            style="txtdescripcionempresa"
            android:paddingHorizontal="@dimen/paddingcabeceradialog"
            android:paddingVertical="@dimen/paddingcabeceradialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:textColor="@color/negro"
            android:textSize="@dimen/txtgridsize"
            android:text="@string/SALIRTXT" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/paddingcabeceradialog" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <Button
        android:id="@+id/cancelarBotonDialog"
        android:background="@drawable/selector_btn_verde"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingVertical="@dimen/paddingcabecera"
        android:text="@string/SALIRCANCELAR"
        android:textColor="@color/blanco"
        android:layout_weight="1"
        android:onClick="clickAtrasDialog">

    </Button>

        <Button
            android:id="@+id/siBotonDialog"
            android:background="@drawable/selector_btn_verde"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingVertical="@dimen/paddingcabecera"
            android:text="@string/SALIRSI"
            android:textColor="@color/blanco"
            android:layout_weight="1"
            android:onClick="clickAtrasDialog">

    </Button>

</LinearLayout>

</LinearLayout>

